--- a/自己写的脚本/脚本功能说明.md
+++ b/自己写的脚本/脚本功能说明.md
@@ -1,8 +1,21 @@
 # extract_subtitles.py
 
 #### 功能说明：
-指定文件夹目录，批量提取目录下所有mp4视频的字幕轨道，批量导出srt文件，然后移除原视频中的字幕轨生成新视频替换原有视频
+背景：网上下载的英文教程，比如Udemy，一般为：文件夹内只有视频文件，视频内嵌英文字幕轨
+
+所以这个脚本执行的步骤：
+* 指定教程视频文件夹路径(不支持递归子文件夹)
+* 循环对每个视频文件执行以下操作：
+    * 使用ffpeng提取mp4视频的字幕轨道，导出同名srt字幕文件
+    * 移除原mp4视频内的字幕轨道，生成无字幕轨的纯视频文件
+    * 替换原有的mp4文件
+
 
 # filter_image_name.py
 ### 功能说明
-指定文件夹目录，相同图片的不同分辨率的多个文件进行去重，保留的优先级是.pic_hd > .pic > .pic_thumb_preview > .pic_thumb"
+背景：微信聊天记录在mac电脑的本地路径下，有image目录，同一张图片有多个分辨率的储存，备份照片是有很多冗余
+
+这个脚本执行的步骤
+* 指定文件夹目录
+* 对相同图片的多个不同分辨率文件进行去重
+* 保留的优先级是.pic_hd > .pic > .pic_thumb_preview > .pic_thumb"
